--- a/package.json
+++ b/package.json
@@ -3,24 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "env-cmd -f .env next dev",
+    "build": "env-cmd -f .env next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.3.5",
+    "@tanstack/react-query": "^5.29.2",
+    "axios": "^1.6.8",
+    "framer-motion": "^11.1.7",
+    "jotai": "^2.8.0",
+    "next": "14.2.2",
+    "next-seo": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "react-icons": "^5.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "babel-plugin-macros": "^3.1.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "eslint-config-next": "14.2.2",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8",
+    "reset-css": "^5.0.2",
+    "tailwindcss": "^3.4.1",
+    "twin.macro": "^3.4.1",
+    "typescript": "^5"
   }
 }
